// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table section header 1`] = `
<tr
  className="section-header"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <h2
        className="title"
      >
        test
      </h2>
    </div>
  </td>
</tr>
`;

exports[`should render a table section header with isCollapsible 1`] = `
<tr
  aria-expanded={true}
  aria-level={1}
  className="section-header is-collapsible"
  data-row-show-focus="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="heading"
  tabIndex="0"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <div
        className="start"
      >
        <span
          className="accordion-icon is-open"
        />
      </div>
      <div
        className="fill"
      >
        <h2
          className="title"
        >
          test
        </h2>
      </div>
    </div>
  </td>
</tr>
`;

exports[`should render a table section header with isCollpased 1`] = `
<tr
  className="section-header"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <h2
        className="title"
      >
        test
      </h2>
    </div>
  </td>
</tr>
`;

exports[`should render a table section header with level 1`] = `
<tr
  className="section-header"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <h3
        className="title"
      >
        test
      </h3>
    </div>
  </td>
</tr>
`;

exports[`should render a table section header with metaData 1`] = `
<tr
  className="section-header"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <h2
        className="title"
      >
        test
      </h2>
    </div>
  </td>
</tr>
`;

exports[`should render a table section header with onSelect 1`] = `
<tr
  className="section-header"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <h2
        className="title"
      >
        test
      </h2>
    </div>
  </td>
</tr>
`;

exports[`should render a table section header with refCallback 1`] = `
<tr
  className="section-header"
>
  <td
    colSpan={1}
  >
    <div
      className="section-content"
    >
      <h2
        className="title"
      >
        test
      </h2>
    </div>
  </td>
</tr>
`;
